--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "v-calendar": "^2.3.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
